# nic-api

./: .gitignore  .travis.yml  CONTRIBUTING.md  README.md  README.rst  pyproject.toml  setup.py
.github/workflows/: tests.yaml
nic_api/: __init__.py  compat.py  exceptions.py  models.py  oauth.py
src/nic_api/: __init__.py  exceptions.py  models.py
tests/: test_basic.py  test_records.py
